@@ -29,18 +29,22 @@ $dialog->{reloaded_signal} = $dialog->signal_connect(
     'reloaded-scan-options' => sub {
         $dialog->signal_handler_disconnect( $dialog->{reloaded_signal} );
 
-        ######################################
+        $dialog->signal_connect(
+            'changed-scan-option' => sub {
+                $dialog->set( 'num-pages',             0 );
+                $dialog->set( 'page-number-increment', 2 );
+                $dialog->scan;
+            }
+        );
 
         # The test dialog conveniently gives us
         #    Source = Automatic Document Feeder,
         # which returns SANE_STATUS_NO_DOCS after the 10th scan.
         # Test that we catch this scanning reverse pages
-
+        # this should also unblock num-page to allow-batch-flatbed
         my $options = $dialog->get('available-scan-options');
         $dialog->set_option( $options->by_name('source'),
             'Automatic Document Feeder' );
-        $dialog->set( 'num-pages',             0 );
-        $dialog->set( 'page-number-increment', 2 );
 
         # need a new main loop because of the timeout
         my $loop = Glib::MainLoop->new;
@@ -63,7 +67,7 @@ $dialog->{reloaded_signal} = $dialog->signal_connect(
         $dialog->signal_connect(
             'process-error' => sub {
                 my ( $widget, $msg ) = @_;
-                ok 0, 'Should not throw error';
+                fail 'Should not throw error';
                 Gtk2->main_quit;
             }
         );
@@ -71,7 +75,7 @@ $dialog->{reloaded_signal} = $dialog->signal_connect(
             'finished-process' => sub {
                 my ( $widget, $process ) = @_;
                 if ( $process eq 'scan_pages' ) {
-                    ok 1, 'Finished scanning reverse pages';
+                    pass 'Finished scanning reverse pages';
                     Gtk2->main_quit;
                 }
             }
