@@ -1,6 +1,7 @@
 1.4.1 (14.05.2016):
 
 * Also import text layer when importing PDF or DjVu.
+* + option in Edit/Preference to allow/forbid batch scanning from a flatbed
 
 
 1.4.0 (14.04.2016):
